# antica-fiamma-public

./: .gitignore  .zenodo.json  CITATION.cff  LICENSES.md  README.md  RELEASE_NOTES.md  SOURCE_PROVENANCE.md  pyproject.toml
.github/workflows/: deploy-pages-shell.yml
demo/: build_authority_static_pages.py  build_demo_data.py  server.py
demo/frontend/: README.md  _redirects  about.html  authority.html  cloudflare_pages_quick_build.sh  guide.html  index.html  reading-route.html  robots.txt  sitemap.xml
demo/runtime_checks/: README.md  app_shell_smoke.mjs  authority_canto_index_smoke.mjs  authority_highlight_click_probe.mjs  authority_interaction_smoke.mjs  capture_reading_route_panels.mjs  entry_first_line_probe.mjs  lily_entry_click_probe.mjs  lily_pilot_probe.mjs  virgilio_highlight_probe.mjs
deployment_output/: PREPARE_PAGES_SHELL.py  README.md
docs/public/: DDP_WORKBENCH_PUBLIC_MINIMUM.md  README.md  data-boundary.md  demo-paths.md  for-reviewers.md  interface-layers.md  project-dossier.md  public-repository-boundary.md  repository-guide.md  rights-and-permissions.md  scheda-progetto.md  sustainability-and-maintenance.md  technical-overview.md
emnlp2026-artifact/: PAPER_DRAFT.md  README.md  RIGHTS_AND_LIMITATIONS.md  ROUTES.md
sample_runtime/: README.md  authority.sample.json  coverage_counts.csv  line_payload.sample.json  manifest.sample.json  record_store.sample.json
src/ddp_scraper/: README.md  __init__.py  analyze_failure_page_structures.py  ddp_detail.py  ddp_targets.py  fetch_commentaries.py  fetch_inferno1_record_text_full.py  line_info.py  (+5 more)
(+3021 files in other folders)
