[project]
name = "ddp-scraper"
version = "0.1.0"
description = "Minimal local scraper for the Dartmouth Dante Project search interface"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
