[project]
name = "antica-fiamma-public"
version = "0.1.0"
description = "Public shell and selected preparation utilities for the Antica Fiamma static Dante reading interface"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
